--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "antd": "^5.24.1",
+    "chart.js": "^4.4.8",
     "dayjs": "^1.11.13",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "tailwindcss": "^4.0.8"
